Version 1.3.X
-------------
* Fix bug where snapintasks if generated after main tasking and before that
tasking is created, get closed and not properly closing the actual deployed
task.
* Fix proxy information to NOT proxy storage node internalized Storage Node
information.
* Fix multicast issues for all relevant systems. Thank you Curtis.
* Fix snapins operate only if the host has snapins.
* Fix size display of images on server to display proper sizes through the use
of rawlist.
* Move clamav off of server to static binaries.  Bumps size of installer
folder from 80MB to 277MB.  However clamav is not loaded in the initrd file
and this same clamav can operate on the fog server.
* Have Vista and XP images follow the same format as Windows 7 and higher
images (e.g. /images/<imagepath>/sys.img.000) for resizable.  WARNING:
Possibly will break older images of the same type.  Meaning to fix:
find the image file (usually in the format: /images/<imagefilepath> as a file
on the disk within the /images folder.  mkdir /images/<imagepath>; mv
/images/<imagefilepath> /images/<imagepath>/sys.img.000
* Change resizable images to all use the same principle of Linux resizable.
This should allow OEM built systems to be imaged even with resizable.
* Add protection flag to image files.
* Add installer files from David Fear to fog to allow FOG Installation on
Arch Linux.
* Add partition imaging selection options into GUI and fog to operate within.
* Add ipxe support for Apple EFI and better generalized EFI support.  Special
thanks to Michael Brown, the iPXE team, and Curtis Larsen for taking the time
to debug and correct and make this work.
* Add support for Apple Mac OS support in our systems.
* Add initial support for torrent casting.  Only works for resizable.
* Adjust bootmenu to store to variables.  This can then allow hooks to
interact with the boot menu setup for customizations as needed.
* Adjust the menu items to go into database to allow adding own custom