@@ -1401,6 +1401,7 @@ $databaseSchema[] = array(
 $databaseSchema[] = array(
 	"INSERT INTO `" . DATABASE_NAME . "`.`os` (`osID`, `osName`, `osDescription`) VALUES ('8', 'Apple Mac OS', '')",
 );
+<<<<<<< HEAD
 // 115
 $databaseSchema[] = array(
 	"INSERT INTO `" . DATABASE_NAME ."`.globalSettings(settingKey, settingDesc, settingValue, settingCategory)
@@ -1604,6 +1605,8 @@ $databaseSchema[] = array(
 	"ALTER TABLE `" . DATABASE_NAME . "`.`images`
 		ADD COLUMN `imageProtect` mediumint(9) NOT NULL AFTER `imagePath`",
 );
+=======
+>>>>>>> Merge branch 'master' of github.com:mastacontrola/fogproject
 print '<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">';
 print "\n".'<html xmlns="http://www.w3.org/1999/xhtml">';
 print "\n\t<head>";
